--- a/RoomDebts/Info.plist
+++ b/RoomDebts/Info.plist
@@ -54,5 +54,10 @@
         <string>Rubik-MediumItalic.ttf</string>
         <string>Rubik-Regular.ttf</string>
     </array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
