Upload user avatar

--- a/RoomDebts/Info.plist
+++ b/RoomDebts/Info.plist
@@ -59,5 +59,11 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>Take photo to avatar</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>You can select photos to avatar</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Please allow access to save photo in your photo library</string>
 </dict>
 </plist>
