--- a/RoomDebts/Info.plist
+++ b/RoomDebts/Info.plist
@@ -26,7 +26,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Take photo to avatar</string>
+	<string>Take photo to avatar. Scanning QR codes.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Please allow access to save photo in your photo library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
